productpage/Deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: productpage
    version: v1
  name: productpage-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
        kiali.io/runtimes: thorntail
      labels:
        app: productpage
        version: v1
    spec:
      containers:
      - image: jotak/bookinfo-runtimes-productpage:latest
        imagePullPolicy: IfNotPresent
        name: productpage
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
