productpage/DeploymentConfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: productpage
    version: v1
  name: productpage-v1
spec:
  replicas: 1
  selector:
    app: productpage
    version: v1
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
        kiali.io/runtimes: thorntail
      labels:
        app: productpage
        version: v1
    spec:
      containers:
      - image: productpage:0.0.1
        imagePullPolicy: IfNotPresent
        name: thorntail-v2
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - thorntail-v2
      from:
        kind: ImageStreamTag
        name: productpage:0.0.1
    type: ImageChange
