productpage/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: productpage
  labels:
    app: productpage
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: productpage
