productpage/Gateway-VS.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servicemesh-productpage-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicemesh-productpage
spec:
  hosts:
  - "*"
  gateways:
  - servicemesh-productpage-gateway
  http:
  - match:
    - uri:
        prefix: /productpage/
    - uri:
        prefix: /productpage
    rewrite:
      uri: /
    route:
    - destination:
        host: productpage
        port:
          number: 8080
